# WEB_AGENTik

./: .gitignore  README.md
agent/: CMakeLists.txt  config.cpp  config.h  config.json  file_watcher.cpp  file_watcher.h  http_client.cpp  http_client.h  logger.cpp  logger.h  main.cpp
server/: agent.js  index.js  package-lock.json  package.json
server/db/: database.js
server/middleware/: auth.js
server/routes/: agents.js  auth.js  patients.js  uploads.js
web/: entrance_page.html  entrance_style.css  index.html  main_menu_page.html  main_menu_style.css  patient_page.html  patient_page_style.css  registration_page.html  registration_page_style.css
